[package]
name = "versionhub"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.51.0", features = ["full"] }
reqwest = "0.13.2"
futures = "0.3.32"
clap = { version = "4.6.0", features = ["derive"] }
log = "0.4.29"
env_logger = "0.11.10"
roxmltree = "0.21.1"
serde_json = "1.0.149"
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }